force-app/main/default/objects/EYI_Cross_Selling__c/EYI_Cross_Selling__c.object-meta.xml
<CustomObject>
    <label>Cross Selling</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Cross selling Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Selling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>