force-app/main/default/objects/EYI_Cross_Selling__c/fields/EYI_Closure_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Closure_Status__c</fullName>
    <label>Closure Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Not Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>