force-app/main/default/objects/EYI_Cross_Selling__c/fields/EYI_Meeting_Done__c.field-meta.xml
<CustomField>
    <fullName>EYI_Meeting_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting Done</label>
    <type>Checkbox</type>
</CustomField>