force-app/main/default/objects/EYI_Cross_Selling__c/fields/EYI_Meeting_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>EYI_Meeting_Scheduled__c</fullName>
    <label>Meeting Scheduled</label>
    <type>DateTime</type>
</CustomField>