force-app/main/default/objects/EYI_Cross_Selling__c/fields/EYI_Outlet__c.field-meta.xml
<CustomField>
    <fullName>EYI_Outlet__c</fullName>
    <label>Outlet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Spazio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>