force-app/main/default/objects/EYI_Cross_Selling__c/fields/EYI_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Transaction_Amount__c</fullName>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>