force-app/main/default/objects/EYI_Cross_Selling__c/fields/EYI_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>